# idris-cil

./: .gitignore  .travis.yml  LICENSE  README.md  idris-cil.cabal  stack.yaml
ciltree/: LICENSE  ciltree.cabal
ciltree/src/Language/CilTree/: Emit.hs  Syntax.hs
ciltree/test/: HLint.hs
ciltree/test/Language/CilTree/: SyntaxSpec.hs
codegen/: Setup.hs  idris-cil.cabal
codegen/main/: Main.hs
codegen/src/IRTS/: CodegenCil.hs
codegen/src/IRTS/Cil/: FFI.hs  UnreachableCodeRemoval.hs
codegen/test/: Main.hs
codegen/test/IRTS/: CodegenCilSpec.hs
codegen/test/cases/: Data.idr  Enums.idr  Ints.idr  Lists.idr  SortedSet.idr  Streams.idr
main/: Main.hs
rts/: cil.ipkg
rts/CIL/: FFI.idr
rts/CIL/Elab/: Enums.idr
rts/CIL/FFI/: Array.idr  Effects.idr  Single.idr
rts/CIL/System/: Environment.idr  Reflection.idr
rts/CIL/System/IO/: File.idr
rts/Data/: HashSet.idr  Nullable.idr  Vector.idr
src/IRTS/: CodegenCil.hs
src/IRTS/Cil/: Builders.hs  CaseDispatch.hs  FFI.hs  MaxStack.hs  OptimizeLocals.hs  Parsers.hs  Types.hs  UnreachableCodeRemoval.hs  VersionParser.hs
test/: HLint.hs
test/IRTS/: CodegenCilSpec.hs
test/IRTS/Cil/: CaseDispatchSpec.hs
test/cases/: Bits32.idr  ByRef.idr  Case.idr  Chars.idr  Delegates.idr  Doubles.idr  Effects.idr  EffectsTest.idr  Enums.idr  FFI.idr  Foldables.idr  Generics.idr  HashSet.idr  HelloWorld.idr  IfThenElse.idr  IntPrimitives.idr  Ints.idr  Lists.idr  MaybeAsNullable.idr  Nullable.idr  PrimitiveArrays.idr  Records.idr  ReferenceTypeArrays.idr  Show.idr  SinglePrimitives.idr  StrInt.idr  StringPrimitives.idr  Strings.idr  ValueTypeArrays.idr  ValueTypeProperties.idr  Vector.idr
