name:                ciltree
version:             0.1.0.0
synopsis:            Expression trees for Language.Cil
homepage:            https://github.com/bamboo/idris-cil
license:             MIT
license-file:        LICENSE
author:              Rodrigo B. de Oliveira
maintainer:          rbo@acm.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Language.CilTree.Syntax
                  , Language.CilTree.Emit
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.7 && <5
                  , containers
                  , unordered-containers
                  , directory
                  , dlist >= 0.7.1.1
                  , filepath
                  , language-cil >= 0.3.1
                  , mtl
                  , text
                  , transformers
                  , bytestring
                  , utf8-string

test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options: -auto-all -caf-all
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    async
                  , base >= 4 && < 5
                  , mtl
                  , transformers
                  , transformers-compat
                  , hspec >= 1.3
                  , smallcheck
                  , hspec-smallcheck
                  , hspec-expectations-pretty-diff
                  , language-cil >= 0.3.1
                  , text
                  , ciltree

test-suite hlint
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4 && < 5
                  , hlint == 1.9.*
  hs-source-dirs:   test
  main-is:          HLint.hs
